Update job names

--- a/wp-content/themes/html5blank2/src/style.css
+++ b/wp-content/themes/html5blank2/src/style.css
@@ -759,6 +759,10 @@ span, a, a:hover {
   .serv-tabs .tabs-icon .active h6 {
     color: #111; }
 
+    .test12345 {
+      display: none;
+    }
+
 /* ----------------------------------------------------------------
      [ End Services Tabs ]
 -----------------------------------------------------------------*/
