Update jobs section

--- a/wp-content/themes/html5blank2/src/style.css
+++ b/wp-content/themes/html5blank2/src/style.css
@@ -760,7 +760,7 @@ span, a, a:hover {
     color: #111; }
 
     .test12345 {
-      display: none;
+      opacity: 0;
     }
 
 /* ----------------------------------------------------------------
