--- a/wp-content/themes/html5blank2/src/style.css
+++ b/wp-content/themes/html5blank2/src/style.css
@@ -817,6 +817,21 @@ span, a, a:hover {
   text-align: justify;
   font-size: 16px; }
 
+  .contact-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .contact-ph {
+    font-size: 1.5rem;
+    margin: 0 0;
+  }
+
+  .contact-social {
+    width:45%;
+  }
+
 /* ----------------------------------------------------------------
      [ End Team ]
 -----------------------------------------------------------------*/
