Add grey background to services text

--- a/wp-content/themes/html5blank2/src/style.css
+++ b/wp-content/themes/html5blank2/src/style.css
@@ -131,6 +131,16 @@ span, a, a:hover {
   background-size: cover;
   background-repeat: no-repeat; }
 
+.service-text-grey-background {
+  background: rgba(70, 70, 70, 0.55);
+  padding: 1.5em 1em;
+}
+
+.service-text-width-controller {
+  max-width: 100%;
+  margin: 0 auto;
+}
+
 .section-padding {
   padding: 100px 0; }
 
