--- a/wp-content/themes/html5blank2/src/style.css
+++ b/wp-content/themes/html5blank2/src/style.css
@@ -141,6 +141,16 @@ span, a, a:hover {
   margin: 0 auto;
 }
 
+.service-border {
+  border-right: 2px solid #fff;
+}
+
+@media only screen and (max-width: 992px) {
+  .service-border {
+    border-right: 0;
+  }
+}
+
 .section-padding {
   padding: 100px 0; }
 
