Fix service button text vanishing in mobile mode

--- a/wp-content/themes/html5blank2/src/style.css
+++ b/wp-content/themes/html5blank2/src/style.css
@@ -1457,8 +1457,7 @@ footer {
     margin-bottom: 30px; }
   .serv-tabs .tabs-icon .item div {
     padding: 15px 0; }
-  .serv-tabs .tabs-icon .item h6 {
-    display: none; } }
+}
 
 #hiddenContent {
   display: none; }
