--- a/wp-content/themes/html5blank2/src/style.css
+++ b/wp-content/themes/html5blank2/src/style.css
@@ -1590,6 +1590,22 @@ div.wpcf7 {
   font-weight: 600;
 }
 
+#last-service-button {
+  padding-bottom: 1.4em;
+}
+
+@media screen and (max-width: 991px) {
+  #last-service-button {
+    padding-bottom: 3em;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  #last-service-button {
+    padding-bottom: 0;
+  }
+}
+
 /**
  * modules/variables
  * ---
