--- a/wp-content/themes/html5blank2/src/style.css
+++ b/wp-content/themes/html5blank2/src/style.css
@@ -834,21 +834,22 @@ span, a, a:hover {
       color: #312884; }
 
 #OurPeople .info p {
+  /* text-align: justify; */
   text-align: justify;
   font-size: 16px; }
 
   .contact-wrapper {
     display: flex;
     justify-content: space-between;
-    align-items: center;
   }
 
-  .contact-ph {
+  #OurPeople #contact-ph {
     font-size: 1.5rem;
     margin: 0 0;
+    text-align: left;
   }
 
-  .contact-social {
+  #OurPeople .contact-social {
     width:45%;
   }
 
