--- a/wp-content/themes/html5blank2/src/style.css
+++ b/wp-content/themes/html5blank2/src/style.css
@@ -838,10 +838,9 @@ span, a, a:hover {
   text-align: justify;
   font-size: 16px; }
 
-  .contact-wrapper {
+  #OurPeople .contact-wrapper {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
     width: 100%;
   }
 
@@ -851,22 +850,24 @@ span, a, a:hover {
     flex-direction: column;
   }
 
-  .contact-ph-wrapper {
+  #OurPeople .contact-ph-wrapper {
     width: 100%;
+    justify-content: center;
+  }
+
+  #OurPeople .contact-ph {
+    font-size: 1.5rem;
+    margin: 0 0;
+    text-align: left;
+    display: inline;
   }
 
   #OurPeople .contact-social-wrapper {
-    justify-content: flex-start;
+    justify-content: center;
   }
 
   #OurPeople .contact-social {
-    margin: 0 auto;
-  }
-
-  #OurPeople #contact-ph {
-    font-size: 1.25rem;
-    margin: 0 0;
-    text-align: left;
+    margin: 0;
   }
 
   /* #OurPeople .contact-social {
