--- a/wp-content/themes/html5blank2/src/style.css
+++ b/wp-content/themes/html5blank2/src/style.css
@@ -269,6 +269,8 @@ span, a, a:hover {
   .navbar .navbar-nav .active {
     color: #312884 !important; }
 
+
+    border-bottom: 3px solid rgb(237, 38, 116);
 .nav-scroll {
   background: #fff;
   border-bottom: 1px solid rgba(12, 12, 12, 0.04);
@@ -876,7 +878,7 @@ span, a, a:hover {
     margin-top: 0;
   }
 
-  div.social br {
+  div.info br {
     display: none;
   }
 
