Fix sectors button

--- a/wp-content/themes/html5blank2/src/style.css
+++ b/wp-content/themes/html5blank2/src/style.css
@@ -21848,7 +21848,7 @@ h1, h2, h3, h4, h5, h6 {
 /*-------------------------------------------------------
     [ Preloader ]
 -------------------------------------------------------*/
-/* .loading {
+.loading {
   position: fixed;
   top: 0;
   left: 0;
@@ -21944,4 +21944,4 @@ h1, h2, h3, h4, h5, h6 {
             transform: translate(0, 0); }
   100% {
     -webkit-transform: translate(19px, 0);
-            transform: translate(19px, 0); } } */
+            transform: translate(19px, 0); } }
