Tweak jobs slider so that all entries are the same height

--- a/wp-content/themes/html5blank2/src/style.css
+++ b/wp-content/themes/html5blank2/src/style.css
@@ -21945,3 +21945,9 @@ h1, h2, h3, h4, h5, h6 {
   100% {
     -webkit-transform: translate(19px, 0);
             transform: translate(19px, 0); } }
+
+@media screen and (min-width: 893px) {
+  .blog .item .post-img img {
+    height: 350px;
+  }
+}
