--- a/wp-content/themes/html5blank2/src/style.css
+++ b/wp-content/themes/html5blank2/src/style.css
@@ -111,7 +111,7 @@ p.modal__text__bold {
 p.modal__text,
 ul.modal__text,
 li.modal__text {
-  text-align: left;
+  text-align: justify;
   font-weight: 300;
   font-size: 1.6rem;
 }
@@ -212,8 +212,8 @@ li.modal__text {
   color: white;
   position: fixed;
   text-decoration: none;
-  top: 5px;
-  right: 17px;
+  top: 7px;
+  right: 20px;
 }
 
 
